# 22s-pa03-girvan-newman-dead-street

./: .gitignore  CMakeLists.txt  README.md  convert.py
data/: converted.graphml  example.graphml  karateClub.graphml  lesMis.graphml  randomGraph.graphml
pythonThings/: checkOutput.py  convert.py  generation.py  pullOtherCommunities.py
src/: Girvan_Newman.cpp  Girvan_Newman.h  convert.py  extension_main.py  main.cpp  matrix_generator.py  sprase_filter.py
